--- a/spring-db/src/main/resources/db.properties
+++ b/spring-db/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://localhost:3306/test_orm?useSSL=false
+jdbc.url=jdbc:mysql://localhost:3306/test_orm?useSSL=false&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=Mysql57@deb
