--- a/web-ryf/tomcatembed/pom.xml
+++ b/web-ryf/tomcatembed/pom.xml
@@ -15,7 +15,11 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
+
         <tomcat.version>9.0.36</tomcat.version>
+        <pebble.version>3.1.2</pebble.version>
+        <jackson.version>2.11.0</jackson.version>
+
     </properties>
 
     <dependencies>
@@ -32,6 +36,30 @@
             <scope>provided</scope>
         </dependency>
         <!--不必引入Servlet API,因为引入Tomcat就自动引入了Servlet API.-->
+        <dependency>
+            <groupId>io.pebbletemplates</groupId>
+            <artifactId>pebble</artifactId>
+            <version>${pebble.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
