春节前告一段落

--- a/spring/db/use_jdbc/src/main/resources/jdbc.properties
+++ b/spring/db/use_jdbc/src/main/resources/jdbc.properties
@@ -1,5 +1,7 @@
 # mysql数据库（文件名：lxfdb）
-jdbc.url=jdbc:mysql//localhost/lxfdb
+jdbc.url=jdbc:mysql://localhost:3306/lxfdb
+# jdbc.url=jdbc:mysql://localhost:3306/lxfdb?useSSL=false&characterEncoding=UTF-8
+
 # 用户名和口令
 jdbc.username=root
 jdbc.password=Mysql80@deb
