--- a/spring/web/springmvc/pom.xml
+++ b/spring/web/springmvc/pom.xml
@@ -7,6 +7,18 @@
     <groupId>com.str</groupId>
     <artifactId>springmvc</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>10</source>
+                    <target>10</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <packaging>war</packaging>
 
     <properties>
@@ -46,7 +58,6 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.2.12.RELEASE</version>
         </dependency>
-
         <!-- jpa 注解 -->
         <dependency>
             <groupId>javax.annotation</groupId>
@@ -78,7 +89,6 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
             <version>9.0.39</version>
-
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
