--- a/spring/web/rest/pom.xml
+++ b/spring/web/rest/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.str</groupId>
-    <artifactId>springmvc</artifactId>
+    <artifactId>rest</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -104,11 +104,13 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- AOP -->
+        <!-- REST -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aspects</artifactId>
-            <version>5.2.12.RELEASE</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.2</version>
         </dependency>
+
+
     </dependencies>
 </project>
