--- a/spring/web/springmvc/pom.xml
+++ b/spring/web/springmvc/pom.xml
@@ -89,11 +89,13 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
             <version>9.0.39</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
             <version>9.0.39</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- 测试 -->
